# addons-rs

./: Cargo.toml  Makefile.toml  README.md  addons-temp.db  addons-temp.sqbpro  addons.db  backup.db
app/: codegen.yml  package-lock.json  package.json  tsconfig.json
app/lib/: apollo.ts  schema.ts
app/lib/documents/: addons.graphql
app/pages/: index.tsx
migrations/: 20220727_initial.sql
src/: db.rs  error.rs  main.rs  model.rs  schema.rs
