[package]
name = "addons-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "4.0.5", features = ["uuid"] }
async-graphql-actix-web = "4.0.5"
actix-web = "4.0.1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.1.2", features = ["serde","v4"] }
sqlx = {version = "0.6", features = ["runtime-actix-native-tls", "sqlite", "chrono"]}
anyhow = "1.0"
chrono = "0.4"
thiserror = "1.0"